test/files/neg/t4584.check
t4584.scala:1: error: error in unicode escape
class A { val /u2
                 ^
t4584.scala:1: error: illegal character '/uffff'
class A { val /u2
                ^
two errors found
